src/syntax_analysis/expressions/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__tests__test_syntax_analysis_for_boolean_expression_case2.snap
---
source: src/syntax_analysis/expressions/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "BOOLEAN": {
            "boolean_token": {
              "token_type": "FALSE",
              "literal": "false"
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
