src/syntax_analysis/expressions/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__tests__test_syntax_analysis_for_identifier_expression_case2.snap
---
source: src/syntax_analysis/expressions/tests.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "IDENTIFIER": {
            "identifier_token": {
              "IDENTIFIER": {
                "literal": "varX"
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
