src/syntax_analysis/expressions/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__tests__test_syntax_analysis_for_integer_expression_case1.snap
---
source: src/syntax_analysis/expressions/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INTEGER": {
            "integer_token": {
              "token_type": "INTEGER",
              "literal": "5"
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
