src/syntax_analysis/expressions/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__tests__test_syntax_analysis_for_prefix_expression_case3.snap
---
source: src/syntax_analysis/expressions/tests.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(tokens)"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "PREFIX": {
            "prefix_token": "NOT",
            "right_hand_expression": {
              "EXPRESSION": {
                "expression": {
                  "BOOLEAN": {
                    "boolean_token": "FALSE"
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
