src/syntax_analysis/expressions/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__tests__test_syntax_analysis_for_prefix_expression_syntax_errors_case2.snap
---
source: src/syntax_analysis/expressions/tests.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code))"
---
{
  "abstract_syntax_tree": [],
  "syntax_parsing_errors": [
    "Syntax error : Do not know how to parse SEMI_COLON as an expression.",
    "Syntax error : No right hand expression to prefix MINUS."
  ]
}
